display name changes and PO number validation.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -79,7 +79,7 @@ basket.page.message.update.reducedNumberOfItemsAdded.noStock={0} has been remove
 basket.page.cartId=Cart ID\:
 basket.page.free=FREE
 basket.page.itemPrice=Item price
-basket.page.unitPrice=Unit price
+basket.page.unitPrice=Ordering Unit price
 basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Shipping Point
