--- a/config/local.properties
+++ b/config/local.properties
@@ -56,6 +56,7 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
 offline.energizer.site = Energizer
+ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
 dateFormat=dd-M-yyyy HH:mm:ss z
