--- a/config/dev-local.properties
+++ b/config/dev-local.properties
@@ -73,3 +73,15 @@ feedprocessor.categorycategoryrelationfeed.headers.mandatory=CategoryCode,Catego
 marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
+
+feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
+feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
+energizer.customer.support.email=customerservice@energizer.com
+website.energizer.http=http://energizer.local.com:9001
+website.energizer.https=https://energizer.local.com:9002
+
+media.energizer.http=http://A2MS1306V:9001
+media.energizer.https=https://A2MS1306V:9002
+
+
+storefront.security.default.required.channel=https
