invoice pdf changes

--- a/config/local.properties
+++ b/config/local.properties
@@ -68,7 +68,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=D:\\CSVFeedFolder
+sharedFolderPath=Z:\\
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -87,7 +87,7 @@ version=Online
 
 
 #invoice piece properties
-invoice.filepath=D:\\Users\\kaushik.ganguly\\Downloads\\
+invoice.filepath=C:\\Users\\m1023278\\Downloads\\ClassDiagramOrder
 invoice.urlpath=http://localhost/invoice/
 
 
@@ -101,7 +101,7 @@ interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 simulateTimeOutinSeconds=30
 orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
-
+invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
