updated properties for personal care

--- a/config/local.properties
+++ b/config/local.properties
@@ -55,7 +55,7 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #Possible Order Status
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
-offline.energizer.site = Energizer
+offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
@@ -83,7 +83,7 @@ excelFileSize=1000000
 
 # Catalog Version Information
 #############################
-catalogName=energizerProductCatalog
+catalogName=personalCareProductCatalog
 version=Online
 
 
@@ -93,7 +93,7 @@ invoice.urlpath=http://localhost/invoice/
 
 
 #material name feed properties
-feedprocessor.productcatalog.id=energizerProductCatalog
+feedprocessor.productcatalog.id=personalCareProductCatalog
 feedprocessor.productcatalog.version=Online
 feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
@@ -118,11 +118,11 @@ marketingcategory.level3.type=Sub-Brand
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.email=customerservice@energizer.com
-website.energizer.http=http://energizer.local.com:9001
-website.energizer.https=https://energizer.local.com:9002
+website.energizer.http=http://10.97.1.167:9001
+website.energizer.https=https://10.97.1.167:9002
 
-media.energizer.http=http://A2MS1306V:9001
-media.energizer.https=https://A2MS1306V:9002
+media.energizer.http=http://10.97.1.167:9001
+media.energizer.https=https://10.97.1.167:9002
 
 
 storefront.security.default.required.channel=https
