--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -2,7 +2,7 @@ account.confirmation.address.added=Your address was created.
 account.confirmation.address.removed=Your address was removed.
 account.confirmation.address.updated=Your address was updated.
 account.confirmation.default.address.changed=Your default address was updated.
-account.confirmation.forgotten.password.link.sent=Please enter the email address of your account to reset your password
+account.confirmation.forgotten.password.link.sent=Please enter the email address of your account to reset your password.
 account.confirmation.password.updated=Your password has been changed. Please log in to access your account.
 account.confirmation.payment.details.removed=Your payment details were removed.
 account.confirmation.profile.updated=Your profile has been updated.
@@ -22,7 +22,7 @@ address.line1=Address Line 1
 address.line1.invalid=Please enter address Line 1
 address.line2=Address Line 2
 address.postcode=Zipcode
-address.postcode.invalid=Please enter zipcode
+address.postcode.invalid=Please enter Zipcode
 address.required=Fields marked* are required
 address.selectCountry=Please select a country
 address.surname=Last Name
