messages changed as per requirements

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -2,7 +2,7 @@ account.confirmation.address.added=Your address was created.
 account.confirmation.address.removed=Your address was removed.
 account.confirmation.address.updated=Your address was updated.
 account.confirmation.default.address.changed=Your default address was updated.
-account.confirmation.forgotten.password.link.sent=Please enter the email address of your account to reset your password
+account.confirmation.forgotten.password.link.sent=After validation of your email address, an email will be sent to you to with the link to reset your password. Link will expire in 30 minutes.
 account.confirmation.password.updated=Your password has been changed. Please log in to access your account.
 account.confirmation.payment.details.removed=Your payment details were removed.
 account.confirmation.profile.updated=Your profile has been updated.
@@ -223,7 +223,7 @@ checkout.multi.sampleLandingPage.text=This is a sample landing page.  Please add
 costCenter.title=Title
 costCenter.title.pleaseSelect=Please select...
 error.bugetcode.notfound=Budget code is not valid
-forgottenPwd.description=Please enter the email address for your account. A link to change your password will be emailed to you.
+forgottenPwd.description=Please enter the email address of your account to reset your password
 forgottenPwd.email=Email Address
 forgottenPwd.email.invalid=Please enter a valid email
 forgottenPwd.submit=Send Email
