Defect Id:76 forgottenPassword expiresInMinutes fix.

--- a/config/local.properties
+++ b/config/local.properties
@@ -12,7 +12,7 @@ b2bStorefrontContextRoot=
 installed.tenants=t1,junit
 
 lang.packs=en,es
-
+forgottenPassword.emailContext.expiresInMinutes=2
 energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
