--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -129,6 +129,7 @@ breadcrumb.home=Home
 breadcrumb.login=Login
 breadcrumb.not.found=Page Not Found
 checkout.checkout=Checkout
+checkout.blocked.order=Order Blocked
 checkout.deliveryAddress.notSelected=Please provide a delivery address for your order
 checkout.deliveryMethod.notSelected=Please select a method of delivery for your order
 checkout.error.invalid.accountType=Your account does not allow you to checkout here.
