--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -22,7 +22,7 @@ address.line1=Address Line 1
 address.line1.invalid=Please enter address Line 1
 address.line2=Address Line 2
 address.postcode=Zipcode
-address.postcode.invalid=Please enter zipcode
+address.postcode.invalid=Please enter Zipcode
 address.required=Fields marked* are required
 address.selectCountry=Please select a country
 address.surname=Last Name
