--- a/config/local.properties
+++ b/config/local.properties
@@ -12,11 +12,9 @@ b2bStorefrontContextRoot=
 installed.tenants=t1,junit
 
 lang.packs=en,es
-<<<<<<< HEAD
 
-=======
 forgottenPassword.emailContext.expiresInMinutes=2
->>>>>>> cba59dd9924fbe7c9e479c691379a55c7ecd77b9
+
 energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
@@ -122,11 +120,11 @@ marketingcategory.level3.type=Sub-Brand
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.email=customerservice@energizer.com
-website.energizer.http=http://10.97.1.167:9001
-website.energizer.https=https://10.97.1.167:9002
+website.energizer.http=http://energizer.local.com:9001
+website.energizer.https=https://energizer.local.com:9002
 
-media.energizer.http=http://10.97.1.167:9001
-media.energizer.https=https://10.97.1.167:9002
+media.energizer.http=http://energizer.local.com:9001
+media.energizer.https=https://energizer.local.com:9002
 
 
 storefront.security.default.required.channel=https
