delivery date included in property file

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -222,6 +222,7 @@ checkout.multi.continueToSingleStep=Continue to single-step checkout
 checkout.multi.sampleLandingPage.text=This is a sample landing page.  Please add your own implementation.
 costCenter.title=Title
 costCenter.title.pleaseSelect=Please select...
+checkout.summary.deliveryDate.header = Delivery Date
 error.bugetcode.notfound=Budget code is not valid
 forgottenPwd.description=Please enter the email address for your account
 forgottenPwd.email=Email Address
