Forgot password expires added. and defined the default expires min as 30 when empty/error.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@
 /bin/ext-platform/*
 /bin/ext-platform-optional/*
 /bin/ext-template/*
+/bin/ext-integration/*
+/bin/ext-cockpit/*
+/bin/ext-backoffice/*
+/bin/ext-atddtests/*
+/bin/ext-atdd/*
 /log/*
 /bin/platform/*
 /sampleconfigurations/*
