--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1469,7 +1469,7 @@ text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
 text.account.excelUpload.noRowsFound=No Rows Found in the Uploaded file
 text.account.excelUpload.cartShippingPoint=The cart Shipping Point is {0}
-text.account.orderHistory.referenceNumber = Order Reference 
+text.account.orderHistory.referenceNumber =  Reference Number 
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
 text.account.Customer.Product.Name= Customer Product Name
@@ -1478,7 +1478,7 @@ text.account.Shipped.Quantity = Shipped Quantity
 text.order.viewInvoice = view Invoice
 text.account.order.offline=Offline
 text.account.order.portal=Portal
-text.account.orderHistory.sap.orderNumber =SAP Order No
+text.account.orderHistory.sap.orderNumber = Order No
 text.account.orderHistory.approvalStatus= Status
 text.account.orderHistory.orderValue=Order Value
 text.account.orderHistory.shippingDetaiils=Shipping Details
@@ -1490,9 +1490,9 @@ text.account.orderHistory.orderStatus =Order Status
 text.account.orderHistory.poNumber  =Purchase Order Number
 
 
-text.account.quickorder.enterwholenumber=enter a whole number
-text.account.quickorder.enterpositivenumber=enter a positive number or non zero number
-text.account.quickorder.entermoqmultiples=enter multiples of MOQ(Minimum Orderding Quantity)
-text.account.quickorder.inputvalidnumber=input a valid number
+text.account.quickorder.enterwholenumber=Enter a whole number
+text.account.quickorder.enterpositivenumber=Enter a positive number or non zero number
+text.account.quickorder.entermoqmultiples=Enter multiples of MOQ(Minimum Orderding Quantity)
+text.account.quickorder.inputvalidnumber=Input a valid number
 
 text.account.quickorder.currentShippingPointInCart=Your cart currently has the Shipping Point : 
