email template vm files

--- a/config/local.properties
+++ b/config/local.properties
@@ -71,7 +71,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=D:\\CSVFeedFolder
 
 # Container volume in M3 and weight in KG
 ##########################################
