--- a/config/local.properties
+++ b/config/local.properties
@@ -14,7 +14,8 @@ installed.tenants=t1,junit
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=2
-
+isEPCEnabled=true
+isEHPEnabled=false
 energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
@@ -71,7 +72,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=D:\\CSVFeedFolder
+sharedFolderPath=Z:\\
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -126,6 +127,17 @@ website.energizer.https=https://energizer.local.com:9002
 media.energizer.http=http://energizer.local.com:9001
 media.energizer.https=https://energizer.local.com:9002
 
+website.personalCare.http=http://personalcare.local.com:9001
+website.personalCare.https=https://personalcare.local.com:9002
+
+media.personalCare.http=http://personalcare.local.com:9001
+media.personalCare.https=https://personalcare.local.com:9002
+
+website.houseHold.http=http://household.local.com:9001
+website.houseHold.https=https://household.local.com:9002
+
+media.houseHold.http=http://household.local.com:9001
+media.houseHold.https=https://household.local.com:9002
 
 storefront.security.default.required.channel=https
 
