Configuration changes to sites in local.properties file

--- a/config/local.properties
+++ b/config/local.properties
@@ -141,5 +141,10 @@ media.houseHold.https=https://household.local.com:9002
 
 storefront.security.default.required.channel=https
 
+#Oracle DB setup Information
+#db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
+#db.driver=oracle.jdbc.driver.OracleDriver
+#db.username=hybris
+#db.password=hybris
 
 
