Configuration changes for sites

--- a/config/local.properties
+++ b/config/local.properties
@@ -14,6 +14,7 @@ installed.tenants=t1,junit
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=2
+##Configuration for sites
 isEPCEnabled=true
 isEHPEnabled=false
 energizer.default.password=Energizer@123
