default  MOQ fixes

--- a/config/local.properties
+++ b/config/local.properties
@@ -148,4 +148,11 @@ storefront.security.default.required.channel=https
 #db.username=hybris
 #db.password=hybris
 
+# Default value of MOQ  and  Lead Time
+######################################
+feedprocessor.defalult.moq.value=1
+feedprocessor.defalult.uom.value=PAL
+feedprocessor.defalult.leadtime.value=30
+
+
 
