--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -85,7 +85,7 @@ basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Shipping Point
 basket.page.uom=Unit Of Ordering
 basket.page.moq=Minimum Ordering Quantity
-basket.page.customerMaterialId=Customer Material Id
+basket.page.customerMaterialId=Customer Material ID
 basket.page.customerProductName=Customer Product Name
 basket.page.MaterialId=Material ID
 basket.page.Weight=Weight
