from email address for cronjobs

--- a/config/local.properties
+++ b/config/local.properties
@@ -118,6 +118,7 @@ marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
 
+cronjobs.from.email=sriram.venkatasubramanian@energizer.com
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
