--- a/config/local.properties
+++ b/config/local.properties
@@ -122,7 +122,8 @@ cronjobs.from.email=sriram.venkatasubramanian@energizer.com
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-energizer.customer.support.email=customerservice@energizer.com
+energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 website.energizer.http=http://energizer.local.com:9001
 website.energizer.https=https://energizer.local.com:9002
 
