status and date format changes.

--- a/config/local.properties
+++ b/config/local.properties
@@ -63,7 +63,7 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
-dateFormat=dd-M-yyyy HH:mm:ss z
+dateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
@@ -73,7 +73,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=D:\\CSVFeedFolder
 
 # Container volume in M3 and weight in KG
 ##########################################
