--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -14,6 +14,7 @@ installed.tenants=t1,junit
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=2
+forgottenPassword.emailContext.expiresInSeconds=120
 ##Configuration for sites
 isEPCEnabled=false
 isEHPEnabled=true
@@ -63,7 +64,7 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
-dateFormat=dd-M-yyyy HH:mm:ss z
+dateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
