--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -125,28 +125,16 @@ feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Leve
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
-website.energizer.http=http://energizer.local.com:9001
-website.energizer.https=https://energizer.local.com:9002
 
-media.energizer.http=http://energizer.local.com:9001
-media.energizer.https=https://energizer.local.com:9002
+website.houseHold.http=http://energizer.ehpqa.com:9001
+website.houseHold.https=https://energizer.ehpqa.com:9002
 
-website.personalCare.http=http://personalcare.local.com:9001
-website.personalCare.https=https://personalcare.local.com:9002
-
-media.personalCare.http=http://personalcare.local.com:9001
-media.personalCare.https=https://personalcare.local.com:9002
-
-website.houseHold.http=http://household.local.com:9001
-website.houseHold.https=https://household.local.com:9002
-
-media.houseHold.http=http://household.local.com:9001
-media.houseHold.https=https://household.local.com:9002
-
+media.houseHold.http=http://energizer.ehpqa.com:9001
+media.houseHold.https=https://energizer.ehpqa.com:9002
 storefront.security.default.required.channel=https
 
 #Oracle DB setup Information
-#db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
+#db.url=jdbc:oracle:thin:@10.97.1.166:1521:hbq
 #db.driver=oracle.jdbc.driver.OracleDriver
 #db.username=hybris
 #db.password=hybris
