--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -135,10 +135,10 @@ media.personalCare.https=https://edgewell.epcqa.com:9002
 storefront.security.default.required.channel=https
 
 #Oracle DB setup Information
-#db.url=jdbc:oracle:thin:@10.98.1.209:1521:hbq
-#db.driver=oracle.jdbc.driver.OracleDriver
-#db.username=hybris
-#db.password=hybris
+db.url=jdbc:oracle:thin:@10.98.1.209:1521:hbq
+db.driver=oracle.jdbc.driver.OracleDriver
+db.username=hybris
+db.password=hybris
 
 # Default value of MOQ  and  Lead Time
 ######################################
