catalogName changed to houseHold

--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -60,7 +60,7 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #Possible Order Status
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
-offline.energizer.site = personalCare
+offline.energizer.site = houseHold
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
@@ -88,7 +88,7 @@ excelFileSize=1000000
 
 # Catalog Version Information
 #############################
-catalogName=personalCareProductCatalog
+catalogName=houseHoldProductCatalog
 version=Online
 
 
@@ -98,7 +98,7 @@ invoice.urlpath=http://localhost/invoice/
 
 
 #material name feed properties
-feedprocessor.productcatalog.id=personalCareProductCatalog
+feedprocessor.productcatalog.id=houseHoldProductCatalog
 feedprocessor.productcatalog.version=Online
 feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
