--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -276,7 +276,7 @@ login.error.account.not.found.subtitle=If you forgot your password, please use t
 login.error.account.not.found.title=Your username or password was incorrect.
 login.error.incorrect.password.subtitle=If you forgot your password, please use the Forgotten Password link.
 login.error.incorrect.password.title=Your username or password was incorrect.
-login.link.forgottenPwd=Forgotten your password?
+login.link.forgottenPwd=Generate New Password
 login.login=Login
 login.password=Password
 login.required=Required
