forgot password label change

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -232,7 +232,7 @@ forgottenPwd.description=Please enter the email address for your account
 forgottenPwd.email=Email Address
 forgottenPwd.email.invalid=Please enter a valid email
 forgottenPwd.submit=Send Email
-forgottenPwd.title=Forgot Your Password?
+forgottenPwd.title=Generate New Password
 form.b2bcustomer.adminrole.error=A B2B Administrator can not downgrade their administrative role.
 form.b2bcustomer.parentunit.error=A B2B Administrator can not modify his parent unit.
 form.b2bunit.approvalProcessCode.required=Please select an approval process for the root unit
