forgot password label changed

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -272,9 +272,9 @@ invalid.monetary.value=Monetary format is not valid
 j_password=Password
 j_username=Email
 login.description=Please sign in using your username and password
-login.error.account.not.found.subtitle=If you forgot your password, please use the Forgotten Password link.
+login.error.account.not.found.subtitle=If you forgot your password, please use the Generate New Password link.
 login.error.account.not.found.title=Your username or password was incorrect.
-login.error.incorrect.password.subtitle=If you forgot your password, please use the Forgotten Password link.
+login.error.incorrect.password.subtitle=If you forgot your password, please use the Generate New Password link.
 login.error.incorrect.password.title=Your username or password was incorrect.
 login.link.forgottenPwd=Generate New Password
 login.login=Login
@@ -411,7 +411,7 @@ register.title=Title
 register.title.invalid=Please select a title
 registration.confirmation.message.subtitle=Please check your email to verify your email address.
 registration.confirmation.message.title=Thank you for registering.
-registration.error.account.exists.subtitle=If you forgot your password, please use the Forgotten Password link.
+registration.error.account.exists.subtitle=If you forgot your password, please use the Generate New Password link.
 registration.error.account.exists.title=An account already exists for this email address.
 replenishmentScheduleForm.activateDaily=Activate daily
 replenishmentScheduleForm.activateMonthly=Activate monthly
