--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -14,6 +14,8 @@ installed.tenants=t1,junit
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=2
+forgottenPassword.emailContext.expiresInSeconds=120
+
 ##Configuration for sites
 isEPCEnabled=true
 isEHPEnabled=false
