EPC QA local.properties

--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -23,7 +23,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=fitsmtp
+mail.smtp.server=fitsmtp.care.corp
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
@@ -127,12 +127,16 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-website.personalCare.http=http://edgewell.epcqa.com:9001
-website.personalCare.https=https://edgewell.epcqa.com:9002
+#website.personalCare.http=http://edgewell.epcqa.com:9001
+#website.personalCare.https=https://edgewell.epcqa.com:9002
 
-media.personalCare.http=http://edgewell.epcqa.com:9001
-media.personalCare.https=https://edgewell.epcqa.com:9002
+#media.personalCare.http=http://edgewell.epcqa.com:9001
+#media.personalCare.https=https://edgewell.epcqa.com:9002
 
+website.personalCare.http=http://qa.edgewell.com
+website.personalCare.https=https://qa.edgewell.com
+media.personalCare.http=http://qa.edgewell.com
+media.personalCare.https=https://qa.edgewell.com
 
 storefront.security.default.required.channel=https
 
