--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -23,7 +23,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=fitsmtp
+mail.smtp.server=fitsmtp.care.corp
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
@@ -126,31 +126,31 @@ feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Leve
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
-website.energizer.http=http://energizer.local.com:9001
-website.energizer.https=https://energizer.local.com:9002
+#website.energizer.http=http://energizer.local.com:9001
+#website.energizer.https=https://energizer.local.com:9002
 
-media.energizer.http=http://energizer.local.com:9001
-media.energizer.https=https://energizer.local.com:9002
+#media.energizer.http=http://energizer.local.com:9001
+#media.energizer.https=https://energizer.local.com:9002
 
-website.personalCare.http=http://personalcare.local.com:9001
-website.personalCare.https=https://personalcare.local.com:9002
+website.personalCare.http=http://personalcare.dev.com:9001
+website.personalCare.https=https://personalcare.dev.com:9002
 
-media.personalCare.http=http://personalcare.local.com:9001
-media.personalCare.https=https://personalcare.local.com:9002
+media.personalCare.http=http://personalcare.dev.com:9001
+media.personalCare.https=https://personalcare.dev.com:9002
 
-website.houseHold.http=http://household.local.com:9001
-website.houseHold.https=https://household.local.com:9002
+#website.houseHold.http=http://household.local.com:9001
+#website.houseHold.https=https://household.local.com:9002
 
-media.houseHold.http=http://household.local.com:9001
-media.houseHold.https=https://household.local.com:9002
+#media.houseHold.http=http://household.local.com:9001
+#media.houseHold.https=https://household.local.com:9002
 
 storefront.security.default.required.channel=https
 
 #Oracle DB setup Information
-#db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
-#db.driver=oracle.jdbc.driver.OracleDriver
-#db.username=hybris
-#db.password=hybris
+db.url=jdbc:oracle:thin:@10.98.1.210:1521:hbd
+db.driver=oracle.jdbc.driver.OracleDriver
+db.username=hybris
+db.password=hybris
 
 # Default value of MOQ  and  Lead Time
 ######################################
