--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -479,7 +479,7 @@ search.nav.facetShowMore_style=more styles...
 search.nav.facetShowMore_fit=more fits...
 search.nav.facetTitle=Shop by {0}
 search.nav.facetValueCount=({0})
-search.nav.refinements=Refinements
+search.nav.refinements=Refine By
 search.nav.removeAttribute=Remove Attribute
 search.nav.resultsForStore=Results for: {0}
 search.no.results=No Results Found
@@ -489,6 +489,7 @@ search.page.lastPage=&raquo;
 search.page.linkNextPage=Next Page
 search.page.linkPreviousPage=Previous Page
 search.page.searchText=You searched for "{0}"
+search.page.searchText.exceptTerm=You searched for
 search.page.showAllResults=Show all
 search.page.showPageResults=Show paginated
 search.page.sortTitle=Sort by\:
