--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -75,7 +75,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=W:\\
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -151,6 +151,11 @@ db.password=hybris
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
+
+# Set the default Log file size
+######################################
+
+log4j.appender.FILE.MaxFileSize=10MB
 
 
 
