restoring the changes for the local properties and making the faq and terms and conditions url configurable

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -161,3 +161,7 @@ feedprocessor.defalult.leadtime.value=30
 
 
 
+
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
