--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -160,3 +160,7 @@ log4j.appender.FILE.MaxFileSize=10MB
 
 
 
+
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
