--- a/config/local.properties
+++ b/config/local.properties
@@ -158,5 +158,6 @@ feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
 
-
-
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
