--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -159,3 +159,7 @@ feedprocessor.defalult.leadtime.value=30
 
 
 
+
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
