--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -149,3 +149,7 @@ feedprocessor.defalult.leadtime.value=30
 
 
 
+
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
