changed the labels in the facet refinement

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -454,7 +454,7 @@ search.meta.description.on=on
 search.meta.description.results=Search results for
 search.advanced.meta.description.title=Advanced Search
 search.meta.title=Search
-search.nav.appliedFilters=Remove
+search.nav.appliedFilters=Your Search
 search.nav.categoryNav=Shop by Category
 search.nav.changeLocation=Change Location
 search.nav.facetShowLess=less...
