matching properties in es properties file and added Cancelled status

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -598,6 +598,7 @@ text.account.order.status.display.REJECTED_BY_MERCHANT=Rejected By Merchant
 text.account.order.status.display.PENDING_APPROVAL_FROM_MERCHANT=Pending Approval From Merchant
 text.account.order.status.display.REJECTED_BY_MERCHANT=Rejected By Merchant
 text.account.order.status.display.OPEN=Open
+text.account.order.status.display.CANCELLED=Cancelled
 text.account.order.status.display.approved=Approved
 text.account.order.status.display.assigned.admin=Assigned To Administrator
 text.account.order.status.display.cancelled=Cancelled
