--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -165,3 +165,4 @@ feedprocessor.defalult.leadtime.value=30
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
+orderHistoryPageSize=20
