removing comments column in approval dashboard

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -636,7 +636,7 @@ text.account.orderApprovalDashBoard.orderStatus=Order Status
 text.account.orderApprovalDashBoard.purchaseOrderNumber=P.O.No\:
 text.account.orderApprovalDashBoard.viewOrdersPendingForApproval=Orders pending for your approval
 text.account.orderApprovalDashboard=Order Approval Dashboard
-text.account.orderApprovalDetails.OrderNumber=Order Number
+text.account.orderApprovalDetails.OrderNumber=Reference Number
 text.account.orderApprovalDetails.comments.label=REJECTION COMMENTS
 text.account.orderApprovalDetails.costCenter=Cost Center
 text.account.orderApprovalDetails.orderPlacedBy=Order placed by
