Environment Configuration changes for EPC and EHP.

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -13,7 +13,9 @@ installed.tenants=t1,junit
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=2
+forgottenPassword.emailContext.expiresInMinutes=30
+forgottenPassword.emailContext.expiresInSeconds=1800
+
 ##Configuration for sites
 isEPCEnabled=false
 isEHPEnabled=true
@@ -21,7 +23,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=fitsmtp
+mail.smtp.server=email.energizer.com
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
@@ -63,7 +65,7 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
-dateFormat=dd-M-yyyy HH:mm:ss z
+dateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
@@ -73,7 +75,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -87,7 +89,7 @@ excelFileSize=1000000
 
 # Catalog Version Information
 #############################
-catalogName=personalCareProductCatalog
+catalogName=houseHoldProductCatalog
 version=Online
 
 
@@ -97,14 +99,17 @@ invoice.urlpath=http://localhost/invoice/
 
 
 #material name feed properties
-feedprocessor.productcatalog.id=personalCareProductCatalog
+feedprocessor.productcatalog.id=houseHoldProductCatalog
 feedprocessor.productcatalog.version=Online
 feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
-simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 simulateTimeOutinSeconds=30
+
+#Bistalk URL for order create, simulate and report
+#------------------------------------------------
+simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
 invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
@@ -124,31 +129,27 @@ feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Leve
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
-website.energizer.http=http://energizer.local.com:9001
-website.energizer.https=https://energizer.local.com:9002
 
-media.energizer.http=http://energizer.local.com:9001
-media.energizer.https=https://energizer.local.com:9002
+#Website URL
+#--------------------------------------------------------
+website.houseHold.http=http://energizer.dev.com:9001
+website.houseHold.https=https://energizer.dev.com:9002
+media.houseHold.http=http://energizer.dev.com:9001
+media.houseHold.https=https://energizer.dev.com:9002
 
-website.personalCare.http=http://personalcare.local.com:9001
-website.personalCare.https=https://personalcare.local.com:9002
-
-media.personalCare.http=http://personalcare.local.com:9001
-media.personalCare.https=https://personalcare.local.com:9002
-
-website.houseHold.http=http://household.local.com:9001
-website.houseHold.https=https://household.local.com:9002
-
-media.houseHold.http=http://household.local.com:9001
-media.houseHold.https=https://household.local.com:9002
+#The below URL for apache to show on email message
+#---------------------------------------------
+#website.houseHold.http=http://dev.energizer.com
+#website.houseHold.https=https://dev.energizer.com
+#media.houseHold.http=http://dev.energizer.com
 
 storefront.security.default.required.channel=https
 
 #Oracle DB setup Information
-#db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
-#db.driver=oracle.jdbc.driver.OracleDriver
-#db.username=hybris
-#db.password=hybris
+db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
+db.driver=oracle.jdbc.driver.OracleDriver
+db.username=hybris
+db.password=hybris
 
 # Default value of MOQ  and  Lead Time
 ######################################
@@ -158,7 +159,9 @@ feedprocessor.defalult.leadtime.value=30
 
 
 
-
+# Set the default Log file size
+#----------------------------------
+log4j.appender.FILE.MaxFileSize=10MB
 
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
