--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -13,8 +13,8 @@ installed.tenants=t1,junit
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=2
-forgottenPassword.emailContext.expiresInSeconds=120
+forgottenPassword.emailContext.expiresInMinutes=30
+forgottenPassword.emailContext.expiresInSeconds=1800
 ##Configuration for sites
 isEPCEnabled=false
 isEHPEnabled=true
@@ -22,7 +22,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=fitsmtp
+mail.smtp.server=email.energizer.com
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
@@ -74,7 +74,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -104,8 +104,10 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
-simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 simulateTimeOutinSeconds=30
+
+#Bistalk URL for order create, simulate and report
+simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
 invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
@@ -128,9 +130,15 @@ energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
 website.houseHold.http=http://energizer.ehpqa.com:9001
 website.houseHold.https=https://energizer.ehpqa.com:9002
-
 media.houseHold.http=http://energizer.ehpqa.com:9001
 media.houseHold.https=https://energizer.ehpqa.com:9002
+
+#The below URL for apache for sending the email
+#---------------------------------------------
+#website.houseHold.http=http://ehpqa.energizer.com
+#website.houseHold.https=https://ehpqa.energizer.com
+#media.houseHold.http=http://ehpqa.energizer.com
+#media.houseHold.https=https://ehpqa.energizer.com
 
 storefront.security.default.required.channel=https
 
@@ -148,7 +156,9 @@ feedprocessor.defalult.leadtime.value=30
 
 
 
-
+# Set the default Log file size
+#----------------------------------
+log4j.appender.FILE.MaxFileSize=10MB
 
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
