--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -13,8 +13,8 @@ installed.tenants=t1,junit
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=2
-forgottenPassword.emailContext.expiresInSeconds=120
+forgottenPassword.emailContext.expiresInMinutes=30
+forgottenPassword.emailContext.expiresInSeconds=1800
 
 ##Configuration for sites
 isEPCEnabled=true
@@ -65,7 +65,7 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
-dateFormat=dd-M-yyyy HH:mm:ss z
+dateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
@@ -75,7 +75,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=Z:\\
+sharedFolderPath=D:\\CSVFeedFolder
 
 # Container volume in M3 and weight in KG
 ##########################################
@@ -105,10 +105,16 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
-simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
-simulateTimeOutinSeconds=30
-orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
-invoicePdfURL=http://10.240.0.111:8080/GenerateURL
+simulateTimeOutinSeconds=120
+#simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
+#orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
+#invoicePdfURL=http://10.240.0.111:8080/GenerateURL
+
+#BizTalk URL for Order Simulate, Order Create and Report
+http://10.99.13.61:8080/SalesOrderSimulate
+http://10.99.13.61:8081/SalesOrderCreate
+http://10.99.13.61:8080/GenerateURL
+
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
@@ -126,23 +132,13 @@ feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Leve
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
-#website.energizer.http=http://energizer.local.com:9001
-#website.energizer.https=https://energizer.local.com:9002
 
-#media.energizer.http=http://energizer.local.com:9001
-#media.energizer.https=https://energizer.local.com:9002
+website.personalCare.http=http://edgewell.dev.com:9001
+website.personalCare.https=https://edgewell.dev.com:9002
 
-website.personalCare.http=http://personalcare.dev.com:9001
-website.personalCare.https=https://personalcare.dev.com:9002
+media.personalCare.http=http://edgewell.dev.com:9001
+media.personalCare.https=https://edgewell.dev.com:9002
 
-media.personalCare.http=http://personalcare.dev.com:9001
-media.personalCare.https=https://personalcare.dev.com:9002
-
-#website.houseHold.http=http://household.local.com:9001
-#website.houseHold.https=https://household.local.com:9002
-
-#media.houseHold.http=http://household.local.com:9001
-#media.houseHold.https=https://household.local.com:9002
 
 storefront.security.default.required.channel=https
 
@@ -158,9 +154,10 @@ feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
+# Set the default Log file size
+######################################
 
-
-
+log4j.appender.FILE.MaxFileSize=10MB
 
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
