--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -13,9 +13,8 @@ installed.tenants=t1,junit
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=2
-forgottenPassword.emailContext.expiresInSeconds=120
-
+forgottenPassword.emailContext.expiresInMinutes=30
+forgottenPassword.emailContext.expiresInSeconds=180
 ##Configuration for sites
 isEPCEnabled=true
 isEHPEnabled=false
@@ -65,7 +64,7 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
-dateFormat=dd-M-yyyy HH:mm:ss z
+dateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
@@ -75,10 +74,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=W:\\
-
-# Container volume in M3 and weight in KG
-##########################################
+sharedFolderPath=W:\\CSVFeedFolder
 
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
@@ -105,11 +101,14 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
+
+
+#Biz Talk URL for order simulate, create and report
 simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
-simulateTimeOutinSeconds=30
 orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
 invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
+simulateTimeOutinSeconds=30
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
 
@@ -127,16 +126,16 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-#website.personalCare.http=http://edgewell.epcqa.com:9001
-#website.personalCare.https=https://edgewell.epcqa.com:9002
+website.personalCare.http=http://edgewell.epcqa.com:9001
+website.personalCare.https=https://edgewell.epcqa.com:9002
+media.personalCare.http=http://edgewell.epcqa.com:9001
+media.personalCare.https=https://edgewell.epcqa.com:9002
 
-#media.personalCare.http=http://edgewell.epcqa.com:9001
-#media.personalCare.https=https://edgewell.epcqa.com:9002
-
-website.personalCare.http=http://qa.edgewell.com
-website.personalCare.https=https://qa.edgewell.com
-media.personalCare.http=http://qa.edgewell.com
-media.personalCare.https=https://qa.edgewell.com
+#The below URL is a apache things for sending the URL for the email links.
+#website.personalCare.http=http://qa.edgewell.com
+#website.personalCare.https=https://qa.edgewell.com
+#media.personalCare.http=http://qa.edgewell.com
+#media.personalCare.https=https://qa.edgewell.com
 
 storefront.security.default.required.channel=https
 
