EPCQA config changes

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -111,9 +111,9 @@ simulateTimeOutinSeconds=120
 #invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
 #BizTalk URL for Order Simulate, Order Create and Report
-http://10.99.13.61:8080/SalesOrderSimulate
-http://10.99.13.61:8081/SalesOrderCreate
-http://10.99.13.61:8080/GenerateURL
+simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
+orderSubmitURL=http://10.99.13.61:8081/SalesOrderCreate
+invoicePdfURL=http://10.99.13.61:8080/GenerateURL
 
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
