Fixed the label issue for "Order Total instead Order Totals" and "FAQS instead FAQ"

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -127,6 +127,14 @@ basket.validation.noStock=Unfortunately <a href="{1}">{0}</a> was removed from y
 basket.validation.unavailable=Unfortunately {0} was removed from your cart as it is no longer available.
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
+
+basket.your.shopping.container.utilization=Container Utilization
+basket.your.shopping.container.utilization.volume=Volume
+basket.your.shopping.container.utilization.weight=Weight
+basket.your.shopping.estimatedleadtime=Estimated lead time
+basket.your.shopping.expecteddeliverydate=Fecha estimada de entrega :
+
+basket.your.shopping.basket=Your Shopping Basket
 breadcrumb.cart=Cart
 breadcrumb.home=Home
 breadcrumb.login=Login
@@ -286,7 +294,7 @@ login.username=Username
 myCompany.login.myCompanyHome=Login to My Company
 order.free=FREE
 order.itemPrice=Item Price
-order.order.totals=Order Totals
+order.order.totals=Order Total
 order.product=Product
 order.productDetails=Product Details
 order.quantity=Quantity
