EHP config changes

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -23,7 +23,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=email.energizer.com
+mail.smtp.server=fitsmtp
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
@@ -61,7 +61,7 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #Possible Order Status
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
-offline.energizer.site = personalCare
+offline.energizer.site=houseHold
 ponumber.checking.pattern=/^[ A-Za-z0-9_@./\\\\#&+-]*$/
 
 #Date Format
