--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -22,7 +22,7 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=email.energizer.com
+mail.smtp.server=fitsmtp
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
