--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -29,6 +29,10 @@ mail.smtp.user=
 mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
+#Email address displayed in the "Sender" field (mandatory)
+mail.from=test@hybris.de
+#Email address used for replying to emails (mandatory)
+mail.replyto=test@hybris.de
 ####################################################################################
 
 # properties for interface types
